--- a/LittleLearners/llindex.html
+++ b/LittleLearners/llindex.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>LittleLearners</h1>
-        <h2>Let's Learn</h2>
+        <h2>Let's Learn colors</h2>
         <img src="header-image.jpg" alt="LittleLearners Banner" class="header-image">
         <div class="color-row">
             <div class="color-box">
