--- a/BashBuilders.html
+++ b/BashBuilders.html
@@ -68,7 +68,7 @@
 <body>
     <header>
         <h1>Welcome to BashBuilders</span></h1>
-        <p>Create Your Party Invites with Ease!</p>
+        <p>Create Your Party Invites Easily!</p>
     </header>
 
     <section>
