--- a/BashBuilders.html
+++ b/BashBuilders.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to BashBuilders</span></h1>
+        <h1>Welcome to BashBuilders!</span></h1>
         <p>Create Your Party Invites Easily!</p>
     </header>
 
