--- a/SilverScreenRater.html
+++ b/SilverScreenRater.html
@@ -34,7 +34,7 @@
 
 <h1>Bollywood Movie Rankings</h1>
 
-<h2>Top 5 Movies with their description:</h2>
+<h2>Top 5 Movies with their description:-</h2>
 <ul class="ranked">
   <li><strong>Dil Chahta Hai:</strong> Three friends navigate through the ups and downs of life and love. (Dir. by Farhan Akhtar)</li>
   <li><strong>3 Idiots:</strong> A comedy-drama about friendship, education, and following one's passion. (Dir. by Rajkumar Hirani)</li>
