--- a/Shakespeare's Wonders/sw.html
+++ b/Shakespeare's Wonders/sw.html
@@ -4,29 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shakespeare's Wonders</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="swstyles.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header-content">
+            <h1>Shakespeare's Wonders</h1>
+            <p>Explore the timeless classics of Shakespeare in digital format.</p>
+        </div>
+    </header>
+
     <div class="container">
-        <h1>Shakespeare's Wonders</h1>
         <div class="books-grid">
             <!-- Book 1 -->
             <div class="book-item">
-                <a href="pdfs/book1.pdf" target="_blank">
-                    <img src="images/book1.jpg" alt="Book 1">
-                    <p>Book 1 Description</p>
+                <a href="pdfs/Hamlet.pdf" target="_blank">
+                    <img src="images/1.jpg" alt="Hamlet">
+                    <p>Hamlet, by William Shakespeare, is a tragedy about a Danish prince seeking revenge for his father's murder.</p>
                 </a>
             </div>
             <!-- Book 2 -->
             <div class="book-item">
-                <a href="pdfs/book2.pdf" target="_blank">
-                    <img src="images/book2.jpg" alt="Book 2">
-                    <p>Book 2 Description</p>
+                <a href="pdfs/Othello.pdf" target="_blank">
+                    <img src="images/2.jpg" alt="Othello">
+                    <p>Othello is a dramatic story about jealousy and deception leading to tragic consequences.</p>
                 </a>
             </div>
-            <!-- Add more books in similar format -->
-            <!-- Book 3 to Book 24 -->
+            <!-- Book 3 -->
+            <div class="book-item">
+                <a href="pdfs/King Lear.pdf" target="_blank">
+                    <img src="images/3.jpg" alt="King Lear">
+                    <p>King Lear explores themes of power, betrayal, and madness as Lear divides his kingdom.</p>
+                </a>
+            </div>
+            <!-- Book 4 -->
+            <div class="book-item">
+                <a href="pdfs/Romeo-and-juliet.pdf" target="_blank">
+                    <img src="images/4.jpg" alt="Romeo and Juliet">
+                    <p>Romeo and Juliet is a timeless tale of star-crossed lovers from feuding families.</p>
+                </a>
+            </div>
+            <!-- Book 5 -->
+            <div class="book-item">
+                <a href="pdfs/The Tragedy of Julius Caesar.pdf" target="_blank">
+                    <img src="images/5.jpg" alt="Julius Caesar">
+                    <p>Julius Caesar is a story of ambition, power, and betrayal that ends in tragedy.</p>
+                </a>
+            </div>
+            <div class="book-item">
+                <a href="pdfs/Twelfth-night.pdf" target="_blank">
+                    <img src="images/6.jpg" alt="Twelfth-night">
+                    <p>Twins wrecked, Viola disguised as a dude. Love triangles, chaos ensues. Laughter, romance, happily ever after</p>
+                </a>
+            </div>
+            <div class="book-item">
+                <a href="pdfs/As You Like It.pdf" target="_blank">
+                    <img src="images/7.jpg" alt="As You Like It">
+                    <p>In disguise in the Forest of Arden, Rosalind finds love and self-discovery. This Shakespearean comedy explores gender roles, love's illusions, and the power of forgiveness.</p>
+                </a>
+                </div>
+                <div class="book-item">
+                    <a href="pdfs/Macbeth.pdf" target="_blank">
+                        <img src="images/8.jpg" alt="Macbeth">
+                        <p>Witches whisper power, Macbeth grabs it. Murder, madness, mayhem ensue. All hail the king, but for how long?
+                        </p>
+                    </a>
         </div>
+        <div class="book-item">
+            <a href="pdfs/The-merchant-of-venice.pdf" target="_blank">
+                <img src="images/9.jpg" alt="The-merchant-of-venice">
+                <p>Venice gamble: love, loans, and a pound of flesh. Shylock's dark deal threatens, but wit and disguise win
+                </p>
+            </a>
     </div>
+    <div class="book-item">
+        <a href="pdfs/A Midsummer Night's Dream.pdf" target="_blank">
+            <img src="images/10.jpg" alt="A Midsummer Night'S Dream">
+            <p>In a magical Athenian forest, fairies cast love spells on quarrelling lovers and bumbling actors rehearse a play. Confusion and hilarity ensue before love's course is corrected under the moonlight
+            </p>
+        </a>
+        </div>
+        <div class="book-item">
+            <a href="pdfs/The Comedy of Errors.pdf" target="_blank">
+                <img src="images/11.jpg" alt="The Comedy of Errors">
+                <p>Double trouble! Identical twins wreak havoc in Ephesus with mistaken identities, slapstick, and romantic blunders.</p>
+            </a>
+            </div>
+            <div class="book-item">
+                <a href="pdfs/Antony-and-cleopatra.pdf" target="_blank">
+                    <img src="images/12.jpg" alt="Antony-and-cleopatra">
+                    <p>Legendary romance meets epic downfall. Antony, a Roman leader, is seduced by Cleopatra, Egypt's queen. Duty versus love ignites war, leading to tragic consequences for both</p>
+                </a>
+                </div>
+         </div>
 </body>
 </html>
