--- a/Shakespeare's Wonders/sw.html
+++ b/Shakespeare's Wonders/sw.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header-content">
             <h1>Shakespeare's Wonders</h1>
-            <p>Explore the timeless classics of Shakespeare in digital format.</p>
+            <p>Explore the timeless classics of Shakespeare in digital format</p>
         </div>
     </header>
 
